--- a/public/style.css
+++ b/public/style.css
@@ -137,6 +137,7 @@ header .shopping span{
     position: fixed;
     top:0;
     left: 100%;
+    z-index: 2000;
     width: 500px;
     background-color: #453E3B;
     height: 100vh;
@@ -145,9 +146,7 @@ header .shopping span{
 .active .card{
     left: calc(100% - 500px);
 }
-.active .container{
-   transform: translateX(-200px);
-}
+
 .card h1{
     color: #E8BC0E;
     font-weight: 100;
@@ -162,20 +161,23 @@ header .shopping span{
     bottom: 0;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 
 }
 .card .checkOut div{
     background-color: #E8BC0E;
-    width: 100%;
+    width: 90%;
     height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     cursor: pointer;
+    margin-left: 0;
 }
-.card .checkOut div:nth-child(2){
+
+
+.card .checkOut div:nth-child(4){
     background-color: #1C1F25;
     color: #fff;
 }
